# coshsh

./: .NOTES  .gitignore  .hound.yml  .pre-commit-config.yaml  .travis.yml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Changelog  MANIFEST.in  MODERNIZATION_SUMMARY.md  Makefile  PERFORMANCE_ANALYSIS.md  PLUGIN_DEVELOPMENT.md  README  README.asciidoc  README.de.asciidoc  README.md  REFACTORING.md  REFACTORING_PLAN.md  TODO  context7.json  coshsh_principle_diagram.md  index.html  mypy.ini  params.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml  python-publish.yml  v-tag-to-release.yml
.serena/: project.yml
.specify/memory/: constitution.md
contrib/classes/: datasource_netbox.py  datasource_svcnow_cmdb_ci.py  detail_rich_interface.py
coshsh/: README.errors  __init__.py  application.py  application_factory.py  configparser.py  contact.py  contactgroup.py  coshshsite.py  datainterface.py  datarecipient.py  datasource.py  datasource_factory.py  dependency.py  generator.py  host.py  hostgroup.py  item.py  jinja2_extensions.py  log.py  monitoring_detail.py  monitoringdetail.py  recipe.py  site.py  templaterule.py  util.py  vault.py
coshsh.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
doc/: coshsh.md  readme.md
docs/: ai_handover.md
specs/001-ai-handover-docs/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-refactor-tests-for-ai/: spec.md  tasks.md
specs/003-add-missing-tests/: spec.md  tasks.md
specs/005-performance-optimization/: plan.md  spec.md
test/: test_application_gearman.py  test_application_mysql.py  test_bin.py  test_classes.py  test_dest.py  test_details.py  test_logging.py  test_pid.py  test_recipes.py  test_sites.py  test_suffix.py  test_usucmdb.py
test/etc/: coshsh.cfg
tests/: .gitignore  README.single_test  TEST_WRITING_GUIDE.md  common_coshsh_test.py  git_reset_hard_and_clean  test_application_mysql.py  test_attrstrip.py  test_bin.py  test_catchall.py  test_classes.py  test_configparser.py  test_contactgroup.py  test_contacts.py  test_csv_filter.py  test_datainterface.py  test_datarecipient.py  test_datasource.py  test_delta.py  test_dependency.py  test_dest.py  test_details.py  test_extensions.py  test_for_tool.py  test_generic.py  test_git.py  test_host.py  test_host_attributes.py  test_inheritance.py  test_item.py  test_jinja2_extensions.py  test_logging.py  test_macros.py  test_merge.py  test_myjinja.py  test_nagiosconf.py  test_obdir_paths.py  test_opentelemetry.py  test_order.py  test_package.py  test_pid.py  (+12 more)
tests/etc/: coshsh.cfg  coshsh13.cfg  coshsh2.cfg  coshsh20.cfg  coshsh3.cfg  coshsh4.cfg  coshsh5.cfg  coshsh6.cfg  coshsh7.cfg  coshsh_merge.cfg  coshsh_regex.cfg  (+1 more)
(+264 files in other folders)
