[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coshsh"
version = "11.1.0.1"
description = "Coshsh - config generator for monitoring systems"
readme = "README.md"
license = {text = "AGPLv3"}
authors = [
    {name = "Gerhard Lausser", email = "gerhard.lausser@consol.de"}
]
keywords = ["nagios", "icinga", "naemon", "shinken", "prometheus", "monitoring"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]
requires-python = ">=3.8"
dependencies = [
    "Jinja2",
    "prometheus_client",
    "pycryptodomex",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "http://github.com/lausser/coshsh"
Repository = "http://github.com/lausser/coshsh"
Issues = "http://github.com/lausser/coshsh/issues"

[project.scripts]
coshsh-cook = "bin.coshsh_cook:main"
coshsh-create-template-tree = "bin.coshsh_create_template_tree:main"

[tool.setuptools.packages.find]
include = ["coshsh*"]

[tool.setuptools.package-data]
coshsh = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]
extend-exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["coshsh"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start lenient, tighten over time
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = [
    "jinja2.*",
    "prometheus_client.*",
    "Crypto.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["coshsh"]
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]